@@ -112,7 +112,7 @@ public class ClientTelemetryReporter implements MetricsReporter {
      context. These additional labels from the request context should be added by broker prior
      exporting the metrics to the telemetry backend.
     */
-    private static final Set<String> EXCLUDE_LABELS = Collections.singleton("client_id");
+    private static final Set<String> EXCLUDE_LABELS = Set.of("client_id");
 
     public static final int DEFAULT_PUSH_INTERVAL_MS = 5 * 60 * 1000;
 
